<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="false"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/table_num"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:background="#c8cbcc"
            android:clickable="false"
            android:orientation="vertical">

            <LinearLayout style="@style/layout_input_amount_style"
                tools:clickable="false">

                <Button
                    android:id="@+id/btn_1"
                    style="@style/btn_input_amount_style"
                    android:layout_marginRight="1dp"
                    android:text="1"
                    android:background="@drawable/button_pressed_style"
                    android:clickable="true" />

                <Button
                    android:id="@+id/btn_2"
                    style="@style/btn_input_amount_style"
                    android:layout_marginRight="1dp"
                    android:text="2"
                    android:background="@drawable/button_pressed_style"
                    android:clickable="true" />

                <Button
                    android:id="@+id/btn_3"
                    style="@style/btn_input_amount_style"
                    android:layout_marginRight="1dp"
                    android:text="3"
                    android:background="@drawable/button_pressed_style"
                    android:clickable="true" />

                <Button
                    android:id="@+id/btn_c"
                    style="@style/btn_input_amount_style"
                    android:clickable="true"
                    android:text="←"
                    android:background="@drawable/button_pressed_style"/>
            </LinearLayout>

            <LinearLayout style="@style/layout_input_amount_style"
                tools:clickable="false">

                <Button
                    android:id="@+id/btn_4"
                    style="@style/btn_input_amount_style"
                    android:layout_marginRight="1dp"
                    android:text="4"
                    android:background="@drawable/button_pressed_style"
                    android:clickable="true" />

                <Button
                    android:id="@+id/btn_5"
                    style="@style/btn_input_amount_style"
                    android:layout_marginRight="1dp"
                    android:text="5"
                    android:background="@drawable/button_pressed_style"
                    android:clickable="true" />

                <Button
                    android:id="@+id/btn_6"
                    style="@style/btn_input_amount_style"
                    android:layout_marginRight="1dp"
                    android:text="6"
                    android:background="@drawable/button_pressed_style"
                    android:clickable="true" />

                <Button
                    android:id="@+id/btn_add"
                    style="@style/btn_input_amount_style"
                    android:text="+"
                    android:background="@drawable/button_pressed_style"
                    android:clickable="true" />
            </LinearLayout>

            <LinearLayout style="@style/layout_input_amount_style"
                tools:clickable="false">

                <Button
                    android:id="@+id/btn_7"
                    style="@style/btn_input_amount_style"
                    android:layout_marginRight="1dp"
                    android:text="7"
                    android:background="@drawable/button_pressed_style"
                    android:clickable="true" />

                <Button
                    android:id="@+id/btn_8"
                    style="@style/btn_input_amount_style"
                    android:layout_marginRight="1dp"
                    android:text="8"
                    android:background="@drawable/button_pressed_style"
                    android:clickable="true" />

                <Button
                    android:id="@+id/btn_9"
                    style="@style/btn_input_amount_style"
                    android:layout_marginRight="1dp"
                    android:text="9"
                    android:background="@drawable/button_pressed_style"
                    android:clickable="true" />
                <Button
                    android:id="@+id/btn_sub"
                    style="@style/btn_input_amount_style"
                    android:layout_marginRight="1dp"
                    android:clickable="true"
                    android:text="-"
                    android:background="@drawable/button_pressed_style"/>

            </LinearLayout>

            <LinearLayout style="@style/layout_input_amount_style"
                android:clickable="false">

                <Button
                    android:id="@+id/btn_t"
                    style="@style/btn_input_amount_style"
                    android:layout_marginRight="1dp"
                    android:text="."
                    android:background="@drawable/button_pressed_style"
                    android:clickable="true"/>

                <Button
                    android:id="@+id/btn_0"
                    style="@style/btn_input_amount_style"
                    android:layout_marginRight="1dp"
                    android:text="0"
                    android:background="@drawable/button_pressed_style"
                    android:clickable="true" />

                <Button
                    android:id="@+id/btn_next"
                    style="@style/btn_input_amount_style"
                    android:clickable="true"
                    android:textSize="20sp"
                    android:text="输备注"
                    android:layout_marginRight="1dp"
                    android:background="@drawable/button_pressed_style"/>

                <Button
                    android:id="@+id/btn_ok"
                    style="@style/btn_input_amount_style"
                    android:text="ok"
                    android:background="@drawable/button_pressed_style"
                    android:clickable="true" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>