<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:orientation="vertical"
    android:layout_columnWeight="1"
    android:layout_rowWeight="1"
    >

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:clickable="false"
        android:scaleType="centerInside"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/tag_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:text="tag_name"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>