...
        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:fontFamily="sans-serif"
            android:text="吃喝"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView6"
...
